--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.3"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
