another vercel test2

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,9 @@
       "use": "@vercel/python"
     }
   ],
+  "redirects": [
+    { "source": "/", "destination": "/main.py" }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
