--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "preBuild": "pip install -r requirements.txt"
+    "preBuild": "pip install -U -r requirements.txt"
   },
   "dependencies": {
     "axios": "^1.7.9",
