--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "api/main.py",
       "use": "@vercel/python"
     },
     {
-      "src": "vite.config.ts",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": { "distDir": "dist" }
     }
