--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://chat-project-iota-smoky.vercel.app/",
   "engines": {
     "node": "22.x"
   },
@@ -11,7 +12,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "preBuild": "pip install -U -r requirements.txt"
+    "postinstall": "pip install -U -r requirements.txt"
   },
   "dependencies": {
     "axios": "^1.7.9",
