--- a/vercel.json
+++ b/vercel.json
@@ -17,11 +17,12 @@
       "dest": "api/main.py"
     },
     {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/index.html",
-      "headers": {
-        "Content-Type": "text/html"
-      }
+      "dest": "/index.html"
     }
   ]
 }
