--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "scripts": {
     "dev": "vite dev",
+    "prebuild": "pip install -U -r requirements.txt",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "preBuild": "pip install -U -r requirements.txt"
+    "api-preview": "uvicorn api.main:app --reload",
+    "vitePreview": "vite preview",
+    "preview": "npx npm-run-all --parallel vitePreview api-preview"
   },
   "dependencies": {
     "axios": "^1.7.9",
