--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
   ],
   "routes": [
     {
-      "src": "/api/classify",
+      "src": "/classify",
       "dest": "/api/server.js"
     },
     {
